# golap_public

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  readme.md
core/: CMakeLists.txt  access.hpp  agg.cuh  apps.cuh  comp.cuh  comp_cpu.hpp  core.hpp  dev_structs.cuh  dev_util.cuh  group.cuh  host_structs.hpp  join.cuh  mem.hpp  metadata.cuh  sort.cuh  storage.hpp  table.hpp  types.hpp  util.hpp
core/hl/: cluster.cuh  sample.cuh  select.cuh  serialization.hpp
core/test/: CMakeLists.txt  access_tests.cu  agg_tests.cu  apps_tests.cu  benchmark_tests.cu  bloom_tests.cu  cluster_tests.cu  comp_tests.cu  group_by_tests.cu  join_tests.cu  mem_tests.cu  metadata_tests.cu  net_tests.cu  op_tests.cu  sample_tests.cu  sort_tests.cu  storage_tests.cu  table_tests.cu  test_common.hpp  util_tests.cu
plot/: behindbars.py  chunk_size.py  chunk_size_comp_ratio.py  common.py  comp_prune_ablation.py  comp_prune_ablation_duck_db.py  comp_ratio_bandwidth.py  comp_ratio_bandwidth_compact.py  convert_all_png.sh  datasets.py  front.py  front_extended.py  front_extended_slides.py  gdsio_2024-03-23T09.28.32.csv  gdsio_export.csv  handcoded_optimized_export.csv  handcoded_optimized_export_1.csv  handcoded_optimized_export_2.csv  handcoded_optimized_export_3.csv  handcoded_optimized_export_4.csv  plot_all.sh  plot_various.py  price.py  proc_plot.py  storageio.py
results/: benchmark_export.csv  mordred_all_queries_export.csv  test.py
scripts/: anonymize.sh  cloud_setup.md  create_archive.sh  init.sh  readme.md  run_benchmark.sh  run_fio.sh  run_gdsio.sh
usecases/ssb/: CMakeLists.txt  dask_ssb.py  duckdb_ssb.cpp  helper.hpp  sample_ssb.cu  ssb.cu  ssb.hpp  ssb_disk_db.cu
usecases/ssb/aws_results/: pruning_2024-07-15T14.21.25.csv  query1.csv  query_2024-07-15T10.09.02.csv  query_2024-07-15T13.05.49.csv  query_2024-07-15T13.06.32.csv  query_2024-07-16T14.27.16.csv  query_export_2.csv  select_aws_2024-05-02T09.32.54.csv  select_aws_2024-05-02T09.33.47.csv  select_aws_2024-05-02T09.34.30.csv  select_aws_2024-05-02T09.35.24.csv  select_aws_2024-05-02T10.46.20.csv  select_aws_2024-05-02T10.47.08.csv  select_aws_2024-05-02T13.16.50.csv  select_s3_remote_2024-05-14T11.07.53.csv  select_s3_remote_2024-05-14T11.08.53.csv
usecases/ssb/data/: SSB_def.hpp  SSB_helper.hpp
usecases/ssb/plot/: avg_ssb.py  chunksize.py  chunksize_comp_prune_ablation.py  chunksize_cpu.py  chunksize_workers.py  comp_ratio.py  cpu_join.py  data_types.py  front.py  hybrid_exec.py  hybrid_exec_new.py  hybrid_exec_slide.py  overlap_new.py  overlap_scan.py  plot_all.sh  pre_aggr.py  pruning_time.py  ratio.py  rowgroupsize.py  sample_plot.py  scaling.py  schemes.py  select_plot.py  ssb_info.py
usecases/ssb/queries/: 01.cuh  01.hpp  01inmem.hpp  02.cuh  02.hpp  02_pre_aggr.hpp  02inmem.hpp  03.cuh  03.hpp  03a.hpp  03c.cuh  03c.hpp  03d.hpp  03inmem.hpp  04.cuh  04.hpp  04inmem.hpp  queries.py  queries.sql  queries_str.hpp  query_common.cuh  select.hpp
usecases/ssb/results/: dask_export.csv  duckdb_pre_aggr_export.csv  duckdb_query_export_1.csv  duckdb_query_export_2.csv  duckdb_query_export_3.csv  duckdb_query_pruning_export.csv  duckdb_scan_export.csv  inmem_query_export.csv  pruning_query1123_export.csv  pruning_query1123_export_2.csv  pruning_query1123_export_3.csv  pruning_query1123_export_4.csv  query3_coexec_export_1.csv  query3_coexec_export_2.csv  query3_export.csv  query3cd_export.csv  query3cf_export.csv  query_export.csv  query_pre_aggr_export.csv  query_sf100_export.csv  query_sf10_export.csv  query_sf50_export.csv  sample_export.csv  scaled_dim_query3_inmem_export.csv  select_STREAMSYNC_export.csv  select_cpu_export.csv  select_export.csv  select_export_2.csv  select_export_3.csv  select_export_4.csv  select_export_5.csv  select_export_6.csv  select_export_7.csv  select_sim_compute_export_1.csv  select_sim_compute_export_2.csv  select_sim_compute_export_3.csv  select_sim_compute_export_4.csv  select_sim_compute_export_5.csv  select_sim_compute_export_6.csv
usecases/ssb/scripts/: run_coexec.sh  run_dask.sh  run_duckdb.sh  run_inmem.sh  run_pruning.sh  run_query.sh  run_sample.sh  run_select.sh  run_select_cpu.sh
usecases/ssb/scripts/duckdb/: csv_to_parquet.sql  init_duckdb.sh  init_row_groups.sh  pre_aggr.sh  schema.sql
usecases/taxi/: CMakeLists.txt  duckdb_taxi.cpp  helper.hpp  sample_taxi.cu  taxi.cu  taxi.hpp  taxi_disk_db.cu
usecases/taxi/aws_results/: query12_export.csv
usecases/taxi/data/: Taxi_def.hpp
usecases/taxi/plot/: comp_prune_ablation.py  comp_ratio.py  queries.py  sample_plot.py  schemes.py
usecases/taxi/queries/: 01.cuh  01.hpp  01inmem.hpp  02.cuh  02.hpp  02inmem.hpp  common.cuh  queries.sql  queries_str.hpp  select.hpp
usecases/taxi/results/: duckdb_query_export.csv  duckdb_query_export_2.csv  inmem_query_export.csv  pruning_export_1.csv  pruning_export_2.csv  query_export.csv  sample_export.csv  select_export.csv  select_export_2.csv
usecases/taxi/scripts/: download.sh  run_duckdb.sh  run_inmem.sh  run_pruning.sh  run_query.sh  run_sample.sh  run_select.sh
usecases/taxi/scripts/duckdb/: csv_to_parquet.sql  init_duckdb.sh  schema.sql
usecases/tpch/: CMakeLists.txt  duckdb_tpch.cpp  helper.hpp  tpch.cu  tpch.hpp  tpch_disk_db.cu
usecases/tpch/data/: TPCH_def.hpp  TPCH_helper.hpp
usecases/tpch/plot/: tpch_info.py
usecases/tpch/queries/: 01.cuh  01.hpp  01inmem.hpp  03.cuh  03.hpp  03inmem.hpp  05.cuh  05.hpp  05inmem.hpp  common.cuh  queries.sql  queries_str.hpp  select.hpp
usecases/tpch/results/: duckdb_query_export.csv  query13_export.csv  query13_pruning_export.csv  query5_export.csv  query5_export_2.csv  query_export.csv  query_export_2.csv  query_export_3.csv  select_export.csv  select_export_2.csv  select_export_3.csv
usecases/tpch/scripts/: remove_comments.sh  run_duckdb.sh  run_query.sh  run_select.sh
usecases/tpch/scripts/duckdb/: csv_to_parquet.sql  init_duckdb.sh  schema.sql
